--- a/_sass/_main.scss
+++ b/_sass/_main.scss
@@ -257,6 +257,7 @@ section, article {
     height: 1px;
     width: 6rem;
     content: '';
+    margin-top: 8rem;
   }
   .footnote {
     a.back {
