--- a/_sass/_main.scss
+++ b/_sass/_main.scss
@@ -61,7 +61,7 @@ html {
 body {
   margin: 0px;
   .content-container {
-    padding: 4vw;
+    padding: 1vw 4vw 4vw;
     .content {
       margin: 0 auto;
       max-width: 1200px;
