--- a/_sass/_ukraine.scss
+++ b/_sass/_ukraine.scss
@@ -1,6 +1,7 @@
 header.ukraine-banner {
   background-color: var(--color-emphasis);
   padding: 0.5rem 0;
+  font-size: var(--font-small);
   .container {
     width: 100%;
     max-width: var(--max-width);
