--- a/_includes/post_card.html
+++ b/_includes/post_card.html
@@ -1,8 +1,16 @@
 <article class="post-card">
-  <time datetime="{{ post.date | date: "%Y-%m-%d" }}">{{ post.date | date: "%Y/%m/%d" }}</time>
+  <div class="featured-image">
+    {% if post.featured_image %}
+      <a href="{{ post.url }}">
+        <img src="{{ post.featured_image }}" alt="">
+      </a>
+    {% endif %}
+  </div>
   <div class="contents">
     <header>
       <strong><a href="{{ post.url }}">{{ post.title }}</a></strong>
+      &mdash;
+      <time datetime="{{ post.date | date: "%Y-%m-%d" }}">{{ post.date | date: "%Y/%m/%d" }}</time>
     </header>
     <p>{{ post.summary }}</p>
   </div>
