new: Add lyrics in footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -17,4 +17,6 @@
     </a> ·
     <a href="https://webring.xxiivv.com/#random" target="_blank" class="webring-link">Webring</a>
   </p>
+  {% assign lyric = site.data.lyrics | sample: 1 %}
+  <p class="motto">{{ lyric }}</p>
 </footer>
