--- a/_sass/_footer.scss
+++ b/_sass/_footer.scss
@@ -30,7 +30,9 @@ footer {
   .motto {
     text-transform: uppercase;
     letter-spacing: 0.1rem;
-    opacity: 0.3
+    opacity: 0.3;
+    font-size: 0.7rem;
+    margin-top: 2rem;
   }
 }
 
