fix(a11y): Some WCAG 2.2 AA-level fixes

--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -37,7 +37,7 @@
         </a>
       </li>
       <li class="theme-toggle">
-        <button onClick="toggleTheme()">
+        <button aria-label="Dark/Light theme toggle" onClick="toggleTheme()">
           <i class="twa twa-sun"></i>
           <i class="twa twa-moon"></i>
         </button>
