--- a/_sass/_ukraine.scss
+++ b/_sass/_ukraine.scss
@@ -1,4 +1,4 @@
-header.ukraine-banner {
+section.ukraine-banner {
   background-color: var(--color-emphasis);
   padding: 0.5rem 0;
   font-size: var(--font-small);
