feat(footer): Tweaks
- Add Accessibility link
- Remove contact/socials
- Add link to source code

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,14 +1,13 @@
 <hr/>
 <footer>
   <p>
-    <a href='#' class="back-to-top">Back to top</a> ·
-    <a href="mailto:mail@gosha.net">mail@gosha.net</a> ·
-    <a rel="me" href="https://merveilles.town/@gosha">Mastodon</a> ·
-    <a rel="me" href="https://github.com/goshatch">GitHub</a>
+    <a href='#' class="back-to-top">Back to top</a>
   </p>
   <p>
     &copy; 2007&ndash;2023 Gosha Tcherednitchenko<br>
     <a href="/colophon">Colophon</a> ·
+    <a href="/accessibility">Accessibility</a> ·
+    <a href="https://github.com/goshatch/gosha.net">Source code</a> ·
     <a href="/feed.xml" class="rss-link">
       <span class="link-text">RSS</span>
       {% include rss_logo.svg %}
