feat(newsletter): Add newsletter name
Also update main navigation to match.

--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -3,37 +3,37 @@
     <ul>
       <li>
         <a class="nav-item{% if active == 'home' %} active{% endif %}" href="/">
-          <i class="twa twa-pirate-flag"></i> Home
+          <i class="twa twa-pirate-flag"></i> <span class="nav-item-label">Home</span>
         </a>
       </li>
       <li>
         <a class="nav-item{% if active == 'projects' %} active{% endif %}" href="/projects">
-          <i class="twa twa-triangular-ruler"></i> Projects
+          <i class="twa twa-triangular-ruler"></i> <span class="nav-item-label">Projects</span>
         </a>
       </li>
       <li>
         <a class="nav-item{% if active == 'portraits' %} active{% endif %}" href="/portraits">
-          <i class="twa twa-camera"></i> Portraits
+          <i class="twa twa-camera"></i> <span class="nav-item-label">Portraits</span>
         </a>
       </li>
       <li>
         <a class="nav-item{% if active == 'blog' %} active{% endif %}" href="/blog">
-          <i class="twa twa-pencil"></i> Blog
+          <i class="twa twa-pencil"></i> <span class="nav-item-label">Blog</span>
         </a>
       </li>
       <li>
         <a class="nav-item{% if active == 'newsletter' %} active{% endif %}" href="/newsletter">
-          <i class="twa twa-love-letter"></i> Newsletter
+          <i class="twa twa-love-letter"></i> <span class="nav-item-label">The Long Term</span>
         </a>
       </li>
       <li>
         <a class="nav-item{% if active == 'about' %} active{% endif %}" href="/about">
-          <i class="twa twa-man-raising-hand-light-skin-tone"></i> About
+          <i class="twa twa-man-raising-hand-light-skin-tone"></i> <span class="nav-item-label">About</span>
         </a>
       </li>
       <li>
         <a class="nav-item{% if active == 'now' %} active{% endif %}" href="/now">
-          <i class="twa twa-high-voltage"></i> Now
+          <i class="twa twa-high-voltage"></i> <span class="nav-item-label">Now</span>
         </a>
       </li>
       <li class="theme-toggle">
