--- a/_includes/post_card.html
+++ b/_includes/post_card.html
@@ -1,11 +1,13 @@
 <article class="post-card">
-  <div class="featured-image">
-    {% if post.featured_image %}
+  {% if post.featured_image %}
+    <div class="featured-image">
       <a href="{{ post.url }}" aria-label="{{ post.title }}">
         <img src="{{ post.featured_image }}" alt="Image thumbnail for blog post '{{ post.title }}'">
       </a>
-    {% endif %}
-  </div>
+    </div>
+  {% else %}
+    <div></div>
+  {% endif %}
   <div class="contents">
     <header>
       <strong><a href="{{ post.url }}">{{ post.title }}</a></strong>
