feat(feed): Add valid Atom button

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -14,6 +14,9 @@
     </a> ·
     <a href="https://webring.xxiivv.com/#random" target="_blank" class="webring-link">Webring</a>
   </p>
+  <p>
+    <a href="http://validator.w3.org/check.cgi?url=https%3A//gosha.net/feed.xml"><img src="/assets/images/valid_atom.png" alt="[Valid Atom 1.0]" title="Validate my Atom 1.0 feed" /></a>
+  </p>
   {% assign lyric = site.data.lyrics | sample: 1 %}
   <p class="motto">{{ lyric }}</p>
 </footer>
