chore(now): Update page title

--- a/_layouts/now.html
+++ b/_layouts/now.html
@@ -2,7 +2,7 @@
 layout: base
 ---
 <header>
-  <h1>What I'm working on now</h1>
+  <h1>What I'm doing now</h1>
   <div class="meta">
     <p>Updated on {{ page.updated_at }}</p>
   </div>
