chore(meta): github -> sourcehut
Also add an explicit MIT license to repo

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,7 +7,7 @@
     &copy; 2007&ndash;2023 Gosha Tcherednitchenko<br>
     <a href="/colophon">Colophon</a> ·
     <a href="/accessibility">Accessibility</a> ·
-    <a href="https://github.com/goshatch/gosha.net">Source code</a> ·
+    <a href="https://git.sr.ht/~gosha/gosha.net">Source code</a> ·
     <a href="/feed.xml" class="rss-link">
       <span class="link-text">RSS</span>
       {% include rss_logo.svg %}
