--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,7 +1,7 @@
 <!-- Greetings, Netrunner!
      I learned to write HTML, CSS, and Javascript by looking through the source
      code of many, many websites. Please, feel free to dig through! The source
-     code is available on GitHub: https://github.com/goshatch/gosha.net,
+     code is available on Sourcehut: https://git.sr.ht/~gosha/gosha.net,
      and you're very welcome to email me with any questions: mail@gosha.net -->
 
 <meta charset="utf-8">
@@ -12,7 +12,7 @@
 <meta name="robots" content="index,follow">
 <meta name="googlebot" content="index,follow">
 <meta name="google" content="nositelinkssearchbox">
-<meta name="generator" content="Jekyll 4.0">
+<meta name="generator" content="Jekyll 4.3">
 <meta name="format-detection" content="telephone=no">
 <meta name="color-scheme" content="light dark">
 <link rel="canonical" href="{{ site.url }}{{ page.url }}">
