feat(uses): Add Uses page

--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -250,6 +250,11 @@
         </a>
       </li>
       <li>
+        <a class="nav-item{% if active == 'uses' %} active{% endif %}" href="/uses">
+          <i class="twa twa-tools"></i> <span class="nav-item-label">Uses</span>
+        </a>
+      </li>
+      <li>
         <a
           class="nav-item{% if active == 'now' %} active{% endif %}"
           href="/now"
