--- a/_sass/_emoji.scss
+++ b/_sass/_emoji.scss
@@ -102,3 +102,6 @@ licensed under MIT: https://ellekasai.mit-license.org/
 .twa-carps {
   background-image: url("/assets/images/icons/carps.svg");
 }
+.twa-tools {
+  background-image: url("/assets/images/icons/tools.svg");
+}
