feat(meta): Add support on Ko-Fi links

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -8,6 +8,7 @@
     <a href="/colophon">Colophon</a> ·
     <a href="/accessibility">Accessibility</a> ·
     <a href="https://git.sr.ht/~gosha/gosha.net">Source code</a> ·
+    <a href="https://ko-fi.com/goshadotnet">Support on Ko-Fi</a> ·
     <a href="/feed.xml" class="rss-link">
       <span class="link-text">RSS</span>
       {% include rss_logo.svg %}
