--- a/_sass/_footer.scss
+++ b/_sass/_footer.scss
@@ -24,7 +24,7 @@ footer {
     background-size: 20px 20px;
     background-repeat: no-repeat;
     background-position: 0 -2px;
-    background-image: url('https://webring.xxiivv.com/icon.black.svg');
+    background-image: url('/assets/images/icons/webring-icon.black.svg');
   }
 
   .motto {
@@ -37,16 +37,16 @@ footer {
 
 @media (prefers-color-scheme: dark) {
   footer .webring-link {
-    background-image: url('https://webring.xxiivv.com/icon.white.svg');
+    background-image: url('/assets/images/icons/webring-icon.white.svg');
   }
 
   html.light footer .webring-link {
-    background-image: url('https://webring.xxiivv.com/icon.black.svg');
+    background-image: url('/assets/images/icons/webring-icon.black.svg');
   }
 }
 
 @media (prefers-color-scheme: light) {
   html.dark footer .webring-link {
-    background-image: url('https://webring.xxiivv.com/icon.white.svg');
+    background-image: url('/assets/images/icons/webring-icon.white.svg');
   }
 }
