feat(newsletter): change URL

--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -22,7 +22,7 @@
         </a>
       </li>
       <li>
-        <a class="nav-item{% if active == 'newsletter' %} active{% endif %}" href="/newsletter">
+        <a class="nav-item{% if active == 'newsletter' %} active{% endif %}" href="/the-long-term">
           <i class="twa twa-love-letter"></i> <span class="nav-item-label">The Long Term</span>
         </a>
       </li>
