feat(meta): Sourcehut -> GitHub
Unfortunately, moving this project back to a GitHub repo, and Render as
a host. I'm doing this reluctantly, because I like Sourcehut and its
tooling, but Sourcehut pages blocks external resources.

This does not allow me to embed for example YouTube videos, but also
breaks the newsletter signup form.

Hopefully this is a temporary reversal.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,13 +7,13 @@
     &copy; 2007&ndash;2023 Gosha Tcherednitchenko<br>
     <a href="/colophon">Colophon</a> ·
     <a href="/accessibility">Accessibility</a> ·
-    <a href="https://git.sr.ht/~gosha/gosha.net">Source code</a> ·
-    <a href="https://ko-fi.com/goshadotnet">Support on Ko-Fi</a> ·
+    <a href="https://github.com/goshatch/gosha.net">Source code</a> ·
     <a href="/feed.xml" class="rss-link">
       <span class="link-text">RSS</span>
       {% include rss_logo.svg %}
     </a> ·
-    <a href="https://webring.xxiivv.com/#random" target="_blank" class="webring-link">Webring</a>
+    <a href="https://webring.xxiivv.com/#random" target="_blank" class="webring-link">Webring</a> ·
+    <a href="https://ko-fi.com/goshadotnet">Support my work on Ko-Fi</a>
   </p>
   <p>
     <a href="http://validator.w3.org/check.cgi?url=https%3A//gosha.net/feed.xml"><img src="/assets/images/valid_atom.png" alt="[Valid Atom 1.0]" title="Validate my Atom 1.0 feed" /></a>
