--- a/_sass/_navigation.scss
+++ b/_sass/_navigation.scss
@@ -28,6 +28,7 @@ body .content > header > nav > ul > li a {
   text-decoration: none;
   &.nav-item {
     display: block;
+    line-height: 2rem;
     .nav-item-label {
       white-space: nowrap;
     }
@@ -43,7 +44,7 @@ body .content > header > nav > ul > li a {
     border-radius: 2rem;
     padding-bottom: 0.5rem;
     cursor: pointer;
-    margin-top: -0.6rem;
+    margin-top: -0.2rem;
   }
   .twa-moon {
     display: none;
@@ -95,6 +96,9 @@ body .content > header > nav > ul > li a {
     display: block;
     margin-right: 0;
     width: 60%;
+  }
+  body .content > header > nav > ul > li a.nav-item {
+    line-height: 1.5rem;
   }
   .theme-toggle {
     position: absolute;
