feat(analytics): trialing Plausible analytics

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -10,6 +10,7 @@
   <head>
     {% include head.html %}
     <link rel="stylesheet" href="/assets/stylesheets/app.css">
+    <script defer data-domain="gosha.net" src="https://plausible.io/js/script.js"></script>
   </head>
   <body>
     {% include ukraine.html %}
