--- a/_sass/_gallery.scss
+++ b/_sass/_gallery.scss
@@ -6,6 +6,7 @@
   flex-direction: row;
   justify-content: flex-start;
   flex-wrap: wrap;
+  margin-bottom: 1rem;
 
   .metadata-item {
     white-space: nowrap;
