feat(links): links page, 88x31 buttons, code highlighting

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -16,7 +16,9 @@
     <a href="https://ko-fi.com/goshadotnet">Support my work on Ko-Fi</a>
   </p>
   <p>
-    <a href="http://validator.w3.org/check.cgi?url=https%3A//gosha.net/feed.xml"><img src="/assets/images/valid_atom.png" alt="[Valid Atom 1.0]" title="Validate my Atom 1.0 feed" /></a>
+    <a href="/links">
+      <img src="/assets/images/88x31.svg" width="88" height="31" alt="A banner showing four icons: a pirate flag, a square ruler, a camera, and a pencil." title="Link free!">
+    </a>
   </p>
   {% assign lyric = site.data.lyrics | sample: 1 %}
   <p class="motto">{{ lyric }}</p>
