--- a/_sass/_main.scss
+++ b/_sass/_main.scss
@@ -86,7 +86,7 @@ p, pre, code, ul, ol {
   margin-top: 0px;
 }
 
-p, h1, h2, h3, h4, time, blockquote, pre, code, ul, ol, aside, .footnotes, .centered {
+p, h1, h2, h3, h4, time, blockquote, pre, code, ul, ol, table, aside, .footnotes, .centered {
   width: 100%;
   max-width: var(--max-width);
   margin-left: auto;
