--- a/_sass/_footer.scss
+++ b/_sass/_footer.scss
@@ -20,10 +20,10 @@ footer {
   }
 
   .webring-link {
-    padding-left: 22px;
+    padding-right: 22px;
     background-size: 20px 20px;
     background-repeat: no-repeat;
-    background-position: 0 -2px;
+    background-position: 100% -2px;
     background-image: url('/assets/images/icons/webring-icon.black.svg');
   }
 
@@ -32,6 +32,25 @@ footer {
     letter-spacing: 0.1rem;
     font-size: 0.7rem;
     margin-top: 2rem;
+  }
+
+  .columns {
+    width: 100%;
+    max-width: var(--max-width);
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: space-between;
+    margin: 0 auto;
+    gap: 1rem;
+  }
+}
+
+@media (max-width: 480px) {
+  footer {
+    .columns {
+      display: block;
+    }
   }
 }
 
