--- a/_sass/_main.scss
+++ b/_sass/_main.scss
@@ -29,6 +29,7 @@
   --font-mono: 'mono', monospace;
   --max-image-width: 50rem;
   --font-small: 0.85rem;
+  --font-x-small: 0.65rem;
 }
 
 :root.dark {
