chore: Sourcehut -> GitHub

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -10,7 +10,7 @@
       <p>
         <a href="/colophon">Colophon</a><br/>
         <a href="/accessibility">Accessibility statement</a><br/>
-        <a href="https://git.sr.ht/~gosha/gosha.net">Source code</a><br/>
+        <a href="https://github.com/goshatch/gosha.net">Source code</a><br/>
         <a href="/feed.xml" class="rss-link">
           <span class="link-text">Subscribe to RSS</span>
           {% include rss_logo.svg %}
